kubernetes2/custom_headers/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: default-backend
  labels:
    gateway: external-http
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: gateway-infra
      sectionName: https
  rules:
    - backendRefs:
        - name: store-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: store-external
  labels:
    gateway: external-http
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: gateway-infra
      sectionName: https
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: store-v1
          port: 8080
    - matches:
        - path:
            value: /v1-custom
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Version
                value: "v1"
              - name: X-Client-IP-Address
                value: "{client_ip_address}"
              - name: X-Client-Geo-Location
                value: "{client_region},{client_city}"
      backendRefs:
        - name: store-v1
          port: 8080
    - matches:
        - path:
            value: /v2
      backendRefs:
        - name: store-v2
          port: 8080
    - matches:
        - path:
            value: /v2-custom
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Version
                value: "v2"
              - name: X-Client-RTT
                value: "{client_rtt_msec}"
            set:
              - name: server
                value: "anonymous"
      backendRefs:
        - name: store-v2
          port: 8080
    - matches:
        - path:
            value: /de
      backendRefs:
        - name: store-german
          port: 8080
